--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Oct 28 2019 15:14:54 GMT+0000 (UTC)  -->
+<!--  Last Published: Mon Oct 28 2019 23:08:41 GMT+0000 (UTC)  -->
 <html data-wf-page="5db704704b13c525c4e8f738" data-wf-site="5db704704b13c5fff6e8f733">
 <head>
   <meta charset="utf-8">
@@ -52,11 +52,11 @@
     </div>
     <div data-w-id="60228cdc-8c83-2493-e67c-2f3571a651b3" class="slide-text">
       <div class="text-wrapp1">
-        <h4>Rich audio.</h4>
+        <h4 class="heading-8">Rich audio.</h4>
         <p class="paragraph">With custom‑designed 12 mm dynamic speaker drivers, Google Pixel Buds deliver high‑quality audio.</p>
       </div>
       <div class="text-wrapp1">
-        <h4>Clearer calls.</h4>
+        <h4 class="heading-7">Clearer calls.</h4>
         <p class="paragraph">Built‑in sensors detect when you’re talking, and mics focused on your voice make sure background noise stays in the background.</p>
       </div>
     </div>
@@ -123,29 +123,31 @@
         <div class="sec4-inside"></div>
       </div>
     </div>
-    <div data-w-id="72b70e5b-2a42-43b7-ff9d-7ee4d959fdf4" class="sec5">
-      <div style="opacity:0" class="div-block-10">
+    <div>
+      <div class="div-block-10">
         <h1 class="sec3-head"><strong>Help on the go.</strong><br></h1><img src="images/unnamed_2unnamed.png" alt="" class="image-3">
         <div class="div-block-9">
-          <div data-w-id="f507a95b-7843-43cc-bda4-4631b97f5c3b" style="opacity:0;-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="sec5-head">“</div>
-          <div data-w-id="535cb71c-6ba1-b37d-b03d-e8286cef20cc" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="sec5-head">Hey</div>
-          <div data-w-id="ed12dd6e-54a7-5ad2-2f0e-7bb17ca21d76" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="sec5-head">Google</div>
-          <div data-w-id="c117d34b-86d3-1dd6-5075-ed0279f383aa" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="sec5-head komma">,</div>
-          <div data-w-id="1a43a4fd-e41d-bbf6-be1e-d2de5514ff3e" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="sec5-head">play</div>
-          <div data-w-id="3ae78613-9dc7-dbc9-2405-c64dc359d2bc" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="sec5-head">my</div>
-          <div data-w-id="1e16038b-499f-7e28-1107-9dd71f591d3e" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="sec5-head">workout</div>
-          <div data-w-id="d1433ff4-8e58-fcb1-7591-d7e5c6bc2314" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="sec5-head">playlist</div>
-          <div data-w-id="9a902013-5429-3165-abdc-6291881da899" style="-webkit-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="sec5-head">”</div>
+          <div data-w-id="f507a95b-7843-43cc-bda4-4631b97f5c3b" class="sec5-head">“</div>
+          <div data-w-id="535cb71c-6ba1-b37d-b03d-e8286cef20cc" class="sec5-head">Hey</div>
+          <div data-w-id="ed12dd6e-54a7-5ad2-2f0e-7bb17ca21d76" class="sec5-head">Google</div>
+          <div data-w-id="c117d34b-86d3-1dd6-5075-ed0279f383aa" class="sec5-head komma">,</div>
+          <div data-w-id="1a43a4fd-e41d-bbf6-be1e-d2de5514ff3e" class="sec5-head">play</div>
+          <div data-w-id="3ae78613-9dc7-dbc9-2405-c64dc359d2bc" class="sec5-head">my</div>
+          <div data-w-id="1e16038b-499f-7e28-1107-9dd71f591d3e" class="sec5-head">workout</div>
+          <div data-w-id="d1433ff4-8e58-fcb1-7591-d7e5c6bc2314" class="sec5-head">playlist</div>
+          <div data-w-id="9a902013-5429-3165-abdc-6291881da899" class="sec5-head">”</div>
         </div>
         <div class="sec-3-head-wrapp _2">
           <p class="sec5-para">To play your favorite music, get directions, or call your mom, just say, &quot;Hey Google.</p>
         </div>
       </div>
+    </div>
+    <div data-w-id="72b70e5b-2a42-43b7-ff9d-7ee4d959fdf4" class="sec5">
       <div class="sec5-outside">
         <div class="sec5-inside"></div>
       </div>
     </div>
-    <div data-w-id="430a029d-963f-9fac-b9af-77066ffd9409" class="sec6">
+    <div>
       <div class="sec-3-head-wrapp _2"><img src="images/übersetzer.svg" alt="" class="image-4">
         <div data-w-id="a23ce2ae-cad9-4f72-c25a-c33e4f10e977" class="div-block-7">
           <div data-w-id="b9343ce4-40d7-e799-3f55-3045791c56c3" class="div-block-8"></div>
@@ -154,6 +156,8 @@
         <h1 class="sec4-head _3">あなたの周りの世界を理解する<br></h1>
         <p class="sec4-para">Get real-time translations right in your ear, whether you’re ordering dinner in Tokyo or visiting your multilingual family.<br></p>
       </div>
+    </div>
+    <div data-w-id="430a029d-963f-9fac-b9af-77066ffd9409" class="sec6">
       <div class="sec5-outside">
         <div class="sec6-inside"></div>
       </div>
@@ -163,19 +167,21 @@
         <h1 class="sec3-head">Thoughtfully designed from ear to ear.<br></h1>
       </div>
       <div data-w-id="240258d1-eefb-677e-6c15-d5c0f6f5be57" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/5db704704b13c5fff6e8f733/5db704704b13c56ff5e8f751_pods-open-trans.json" data-loop="0" data-direction="1" data-autoplay="0" data-is-ix2-target="1" data-renderer="canvas" data-default-duration="1.24" data-duration="0" data-ix2-initial-state="0" class="lottie-animation-3"></div>
-    </div>
-    <div class="sec8">
-      <div class="sec8-cont">
-        <h4 class="sec8-head">Power up without a plug.</h4>
-        <p class="paragraph">Charge your Google Pixel Buds in its case or place the case on a compatible wireless charging pad.</p>
-      </div>
-      <div class="sec8-cont">
-        <h4 class="sec8-head">Pair up quickly.</h4>
-        <p class="paragraph">With Google Pixel, pair them with a tap. Google Pixel Buds also easily connect with any Bluetooth™ 4.0+ iOS and Android device</p>
-      </div>
-      <div class="sec8-cont">
-        <h4 class="sec8-head">Find your earbuds.</h4>
-        <p class="paragraph">Don’t worry about misplacing your earbuds. Find My Device makes it easy to locate Google Pixel Buds.</p>
+      <div class="section">
+        <div class="sec8">
+          <div class="sec8-cont">
+            <h4 class="sec8-head">Power up without a plug.</h4>
+            <p class="paragraph">Charge your Google Pixel Buds in its case or place the case on a compatible wireless charging pad.</p>
+          </div>
+          <div class="sec8-cont">
+            <h4 class="sec8-head">Pair up quickly.</h4>
+            <p class="paragraph">With Google Pixel, pair them with a tap. Google Pixel Buds also easily connect with any Bluetooth™ 4.0+ iOS and Android device</p>
+          </div>
+          <div class="sec8-cont">
+            <h4 class="sec8-head">Find your earbuds.</h4>
+            <p class="paragraph">Don’t worry about misplacing your earbuds. Find My Device makes it easy to locate Google Pixel Buds.</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="sec9">
