--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Mon Oct 28 2019 23:08:41 GMT+0000 (UTC)  -->
+<!--  Last Published: Tue Oct 29 2019 16:12:34 GMT+0000 (UTC)  -->
 <html data-wf-page="5db704704b13c525c4e8f738" data-wf-site="5db704704b13c5fff6e8f733">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
   <div style="display:flex;opacity:1" class="popup-about">
     <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:1" class="popup-cont">
       <h1 class="heading-5">Disclaimer</h1>
-      <p class="popup-sub">This redesign was created by sola Babatunde to learn how to build a Google quality website with minimal resources and implementing new UX choices. Case study is on its way!  <br>All rights for the content are reserved by Google.</p><a data-w-id="731268c7-2f5b-2198-e2a3-fb141f9e50c3" href="#" class="pop-up-ok w-button">Lets go</a><a href="https://www.solababatunde.com" target="_blank" class="link">Or... we can go back to my site!</a></div>
+      <p class="popup-sub">This redesign was created by Web Desire for practice purposes and to show that such a project can be created in Webflow. <br>All rights for the content are reserved by Google.</p><a data-w-id="731268c7-2f5b-2198-e2a3-fb141f9e50c3" href="#" class="pop-up-ok w-button">Lets go</a><a href="https://web-desire.de" target="_blank" class="link">www.web-desire.de</a></div>
   </div>
   <div data-w-id="f08ccf0d-4fe5-be8e-4229-daa4a130b68f" class="nav">
     <div class="menu-wrapp1"><img src="images/download_1download.png" alt="" class="image"><a href="#" class="menupunkt">Phones </a><a href="#" class="menupunkt">Connected Home</a><a href="#" class="menupunkt">Gaming</a><a href="#" class="menupunkt">Laptops</a><a href="#" class="menupunkt">Tablets</a><a href="#" class="menupunkt">Accessories</a><a href="#" class="menupunkt">Special Offers</a></div>
@@ -77,7 +77,7 @@
                 <div class="line-s"></div>
                 <div class="s1cont">
                   <h4 class="heading-4">Clearer calls.</h4>
-                  <p class="paragraph">Built‑in sensors detect when you’re talking, and mics focused on your voice make sure background noise stays in the background.</p>
+                  <p class="paragraph-3">Built‑in sensors detect when you’re talking, and mics focused on your voice make sure background noise stays in the background.</p>
                 </div>
               </div>
             </div>
